--- a/response.html
+++ b/response.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <link rel="icon" href="images/logo1.png"/>
+  <link rel="icon" href="logo1.png"/>
   <title>PixelNeuTech</title>
 
   <!-- slider stylesheet -->
@@ -87,7 +87,7 @@
     <center>
      <h1 style="font-family:Times New Roman,Times,serif;"><b>Thank you for getting in touch!<b></h1>    
 
-     <img src="images/1.png" height="150">
+     <img src="1.png" height="150">
 
      <p style="font-size:20px;font-family:Times New Roman,Times,serif;line-height: 1.2;">" We appreciate you contacting us.One of our colleagues will 
       get back in touch with you soon!Have a great day!"</p>
