--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
 
               <input type="hidden" name="_template" value="box">
 
-              <input type="hidden" name="_next" value="response.html">
+              <input type="hidden" name="_next" value="https://pixelneutech.github.io/pixelneutech/response.html">
 
             <div>
               <input name="Name" type="text" placeholder="Name" />
