--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                     Portfolio
                   </a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="contact.html">
                     Contact Us</a>
                 </li>
