--- a/about.html
+++ b/about.html
@@ -199,8 +199,7 @@
     <section class=" footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          &copy; <span id="displayYear"></span> All Rights Reserved By PixelNeuTech</a>
         </p>
       </div>
     </section>
