--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         Our mission is to create beautiful, functional, and user-friendly websites that help our 
                         clients to reach their business goals.                     
                       </p>
-                      <a href="">
+                      <a href="contact.html">
                         Contact Us
                       </a>
                     </div>
@@ -144,7 +144,7 @@
                         Logo design is the creative process of creating a visual representation of a company or brand.
                          A great logo should be simple, memorable, and reflect the values and goals of the company or brand. 
                       </p>
-                      <a href="">
+                      <a href="contact.html">
                         Contact Us
                       </a>
                     </div>
@@ -173,7 +173,7 @@
                         Our design team will work with you to create a unique and eye-catching 
                         brochure that will stand out from the competition.                   
                       </p>
-                      <a href="">
+                      <a href="contact.html">
                         Contact Us
                       </a>
                     </div>
@@ -202,7 +202,7 @@
                         Whether you're looking for a professional, corporate or creative design, 
                         we guarantee satisfaction with every card.                      
                       </p>
-                      <a href="">
+                      <a href="contact.html">
                         Contact Us
                       </a>
                     </div>
